--- a/.azdev/run-with-agents.invoke.yml
+++ b/.azdev/run-with-agents.invoke.yml
@@ -37,7 +37,7 @@ jobs:
             "ref": "main",
             "inputs": {
               "buildNumber": "$(Build.DefinitionName) - $(Build.BuildNumber) - $(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)",
-              "jobCount": "${{ parameters.jobCount }}",
+              "jobCount": "${{ parameters.workers }}",
               "pool": "${{ parameters.pool }}",
               "image": "${{ parameters.image }}",
               "targetAzureRegion": "${{ replace(parameters.azureRegion, '*', '') }}"
