--- a/.azdev/run-with-agents.invoke.yml
+++ b/.azdev/run-with-agents.invoke.yml
@@ -40,7 +40,7 @@ jobs:
               "jobCount": "${{ parameters.workers }}",
               "pool": "${{ parameters.pool }}",
               "image": "${{ parameters.image }}",
-              "targetAzureRegion": "${{ replace(parameters.azureRegion, '*', '') }}"
+              "targetAzureRegion": "${{ replace(parameters.azureRegion, '*', '') }}",
               "token": "$(System.AccessToken)",
               "taskId": "$(System.TaskInstanceId)",
               "taskUrl": "$(System.CollectionUri)$(System.TeamProject)?buildId=$(Build.BuildId)&jobId=$(System.JobId)&planId=$(System.PlanId)&taskId=$(System.TaskInstanceId)&timelineId=$(System.TimelineId)"
