--- a/.azdev/run-with-agents.invoke.yml
+++ b/.azdev/run-with-agents.invoke.yml
@@ -7,6 +7,8 @@ parameters:
   - 'ubuntu-latest'
 - name: workers
   type: number
+- name: parallelism
+  type: number
 - name: pool
   displayName: Target Pool
   type: string
@@ -38,6 +40,7 @@ jobs:
             "inputs": {
               "buildNumber": "$(Build.DefinitionName) - $(Build.BuildNumber) - $(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)",
               "jobCount": "${{ parameters.workers }}",
+              "parallelism": "${{ parameters.parallelism }}",
               "pool": "${{ parameters.pool }}",
               "image": "${{ parameters.image }}",
               "targetAzureRegion": "${{ replace(parameters.azureRegion, '*', '') }}",
