--- a/.azdev/run-with-agents.invoke.yml
+++ b/.azdev/run-with-agents.invoke.yml
@@ -22,11 +22,19 @@ parameters:
   - northcentralus
 - name: jobName
   type: string
+- name: threadIds
+  type: string
+  default: "0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30"
 
 jobs:
 - ${{ if ne(parameters.workers, 0) }}:
   - job: ${{ parameters.jobName }}
     timeoutInMinutes: 15
+    variables:
+      ${{ ne(parameters.parallelism, 0) }}:
+        ThreadIds: ${{ split(parameters.threadIds, format(',{0},', parameters.parallelism))[0] }}
+      ${{ else }}:
+        ThreadIds: ${{ parameters.threadIds }}
     pool: server
     steps:
     - task: InvokeRESTAPI@1
@@ -42,6 +50,7 @@ jobs:
               "buildNumber": "$(Build.DefinitionName) - $(Build.BuildNumber) - $(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)",
               "jobCount": "${{ parameters.workers }}",
               "parallelism": "${{ parameters.parallelism }}",
+              "threadIds": "[${{ parameters.threadIds }}]"
               "pool": "${{ parameters.pool }}",
               "image": "${{ parameters.image }}",
               "targetAzureRegion": "${{ replace(parameters.azureRegion, '*', '') }}",
