--- a/.github/workflows/runnerdispatch.yml
+++ b/.github/workflows/runnerdispatch.yml
@@ -22,7 +22,7 @@ on:
       parallelism:
         description: "The requesting pipeline build number."
         required: true
-        default: 30
+        default: 1000
         type: number
       pool:
         description: "The pool to add the agent."
@@ -39,13 +39,17 @@ on:
         description: "The token to use for the agent."
         required: false
         default: ''
+      threadIds:
+        description: "The set of thread ids."
+        required: false
+        default: '[0,1,2,3,4,5,6,7,8,9,10]'
 
 jobs:
   stage:
     strategy:
       max-parallel: ${{ fromJSON(inputs.parallelism) < fromJSON(inputs.jobCount) && fromJSON(inputs.parallelism) || fromJSON(inputs.jobCount)  }}
       matrix:
-        threadIndex: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30]
+        threadIndex: ${{ fromJSON(inputs.threadIds) }}
     uses: ./.github/workflows/runnerdispatch.thread.yml
     secrets:
       token: ${{ inputs.token }}
