--- a/.github/workflows/testmatrix.yml
+++ b/.github/workflows/testmatrix.yml
@@ -17,10 +17,15 @@ on:
         description: "The vm image to run the agent with."
         required: true
         default: "windows-latest"
+
+env:
+  parallelism: ${{ fromJSON(inputs.parallelism) < fromJSON(inputs.jobCount) && fromJSON(inputs.parallelism) || fromJSON(inputs.jobCount)  }}
+  threadsIds: "[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30]"
+
 jobs:
   stage:
     strategy:
-      max-parallel: ${{ fromJSON(inputs.parallelism) }}
+      max-parallel: ${{ fromJSON(env.parallelism) }}
       matrix:
         threadIndex: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30]
     uses: ./.github/workflows/testmatrix.thread.yml
