--- a/.azdev/run-with-agents.invoke.yml
+++ b/.azdev/run-with-agents.invoke.yml
@@ -31,7 +31,7 @@ jobs:
   - job: ${{ parameters.jobName }}
     timeoutInMinutes: 15
     variables:
-      ${{ ne(parameters.parallelism, 0) }}:
+      ${{ if ne(parameters.parallelism, 0) }}:
         ThreadIds: ${{ split(parameters.threadIds, format(',{0},', parameters.parallelism))[0] }}
       ${{ else }}:
         ThreadIds: ${{ parameters.threadIds }}
