--- a/.azdev/run-with-agents.invoke.yml
+++ b/.azdev/run-with-agents.invoke.yml
@@ -50,7 +50,7 @@ jobs:
               "buildNumber": "$(Build.DefinitionName) - $(Build.BuildNumber) - $(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)",
               "jobCount": "${{ parameters.workers }}",
               "parallelism": "${{ parameters.parallelism }}",
-              "threadIds": "[${{ parameters.threadIds }}]",
+              "threadIds": "[$(ThreadIds)}]",
               "pool": "${{ parameters.pool }}",
               "image": "${{ parameters.image }}",
               "targetAzureRegion": "${{ replace(parameters.azureRegion, '*', '') }}",
