Elevate in test job

--- a/.github/workflows/testjob.yml
+++ b/.github/workflows/testjob.yml
@@ -14,5 +14,16 @@ jobs:
         name: "Reserve and Run Agent"
         shell: pwsh
         run: |
+          if ($IsLinux) {
+            # Get the current user's UID
+            $currentUserId = (id -u)
+            if (($Env:IsSudo -ne "1") -and ($currentUserId -ne 0)) {
+              Write-Host "Invoking IsSudo=$($Env:IsSudo)"
+              $Env:IsSudo="1"
+              sudo -E pwsh -File $($MyInvocation.MyCommand.Path)
+              return;
+            }
+          }
+
           ${{ inputs.command }}
     
