--- a/.azdev/run-with-agents.yml
+++ b/.azdev/run-with-agents.yml
@@ -45,6 +45,10 @@ jobs:
     - job: ${{ job.job }}
       ${{ if job.displayName }}:
         displayName: ${{ job.displayName }}
+      ${{ if job.timeoutInMinutes }}:
+        timeoutInMinutes: ${{ job.timeoutInMinutes }}
+      ${{ if job.cancelTimeoutInMinutes }}:
+        cancelTimeoutInMinutes: ${{ job.cancelTimeoutInMinutes }}
       ${{ if parameters.jobs[0].strategy.parallel }}:
         strategy:
           parallel: ${{ parameters.jobs[0].strategy.parallel }}
