--- a/.azdev/run-with-agents.yml
+++ b/.azdev/run-with-agents.yml
@@ -67,6 +67,8 @@ jobs:
         displayName: ${{ job.displayName }}
       ${{ if job.timeoutInMinutes }}:
         timeoutInMinutes: ${{ job.timeoutInMinutes }}
+      ${{ if job.timeoutInMinutes }}:
+        timeoutInMinutes: ${{ job.timeoutInMinutes }}
       ${{ if job.cancelTimeoutInMinutes }}:
         cancelTimeoutInMinutes: ${{ job.cancelTimeoutInMinutes }}
       ${{ if parameters.jobs[0].strategy.parallel }}:
